<resources>
    <string name="app_name">Ticketing System</string>
    <string name="title_activity_login">Sign in</string>
    <string name="configure">Configure</string>
    <string name="login">Login</string>
    <string name="reg">Register</string>
    <string name="signout">Sign out</string>
    <string name="prompt_username">Username</string>
    <string name="prompt_passwords">Password</string>
    <string name="banner_ad_unit_id">ca-app-pub-7991240024021658/5181505078</string>
    <string name="prompt_confirm_passwords">Confirm Password</string>
    <string name="copyright">Copyright @2017. MexsyCorps Limited. All Rights Reserved.</string>

    <!-- app specific strings -->
    <string name="prompt_org">Organisation</string>
    <string name="sub">Submit</string>
    <string name="auth_failed">Unfortunately, we were unable to register at this time. Try again later</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>

    <!--  DeviceListActivity -->
    <string name="scanning">Scanning Device&#8230;</string>
    <string name="select_device">Select the connected device</string>
    <string name="none_paired">No matching devices</string>
    <string name="none_found">No device found</string>
    <string name="search">Select printer</string>
    <string name="button_scan">Scanning device</string>
    <string name="title_other_devices">Other useful equipment</string>
    <string name="title_paired_devices">Select printer to connect</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_login2">Sign in</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="title_activity_main3">Main3Activity</string>
    <string name="title_activity_main4">Main4Activity</string>

</resources>
